refactor: fix static factory naming